styles.css
body {
    font-family: "Inconsolata", serif;
    font-weight: 600;
    font-variation-settings:
            "wdth" 112.6;
    padding-top: 20px;
}

.navigation-bar {
    z-index: 1000;
    position: fixed;
    background-color: white;
    top: 0;
    width: 100%;
    height: 80px;
    padding: 40px 50px;
    display: flex;
    justify-content: space-between;
    text-decoration: none;
    font-family: "Inconsolata", serif;
    font-weight: 1000;
    font-size: large;
    font-variation-settings:
            "wdth" 112.6;
}

.navigation-bar a {
    outline: none;
    color: #333;
    text-decoration: none;
    transition: color 0.3s ease;
}

.navigation-bar a:hover {
    color: #B33A3A;
    font-weight: bold;
}

.justified-text {
    text-align: justify;
}

section {
    scroll-margin-top: 80px;
    display: flex;
    margin: 25px;
    padding: 25px;
}

#Home {
    margin-top: 60px;
    position: relative;
    background: url("images/layered-waves-haikei copy.svg") no-repeat center bottom;
    background-size: cover;
    border-radius: 18px;
}

#Skills h1,
#Experience h1,
#About h1,
#Contact h1 {
    color: #e26b43;
    font-size: 70px;
    text-align: center;
}

.greeting h1 {
    display: inline-block;
    margin-right: 10px;
    vertical-align: top;
}

.background-gif {
    display: inline-block;
    width: 40px;
    height: auto;
    vertical-align: top;
}

.profile-container {
    position: relative;
    margin-left: 5%;
    margin-right: 5%;
    padding: 10px;
    max-width: 100%;
    justify-content: center;
    box-sizing: border-box;
}

.profile-name {
    color: #E26B43;
    z-index: 1;
    font-size: 70px;
}

.profile-picture {
    margin-top: 40px;
    z-index: -1;
    height: 300px;
    width: 300px;
    display: block;
    border-radius: 50%;
    object-fit: cover;
    justify-self: center;
}

.external-link {
    padding-top: 10px;
    display: flex;
    gap: 20px;
}

.external-link a strong {
    color: black;
    font-size: 40px;
    transition: color 0.3s ease;
}

.external-link a strong:hover {
    color: #B33A3A;
}

#Projects {
    padding: 50px 20px;
    text-align: center;
    background-color: #b33a3a;
    border-radius: 18px;
}

#Projects h1 {
    color: #FFF3CF;
    font-size: 70px;
    text-align: center;
}

.card-deck {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 5px;
    padding: 20px;
    margin-top: 20px;
}

.card h2, .card h3 {
    color: #4c0606;
}

.card {
    background-color: #FFF3CF !important;
    border-radius: 18px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    overflow: hidden;
    width: auto;
    height: auto;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
    padding: 20px;
    display: flex;
    flex-direction: column;
}

.card:hover {
    transform: translateY(-20px);
    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
}

.tech-list {
    justify-content: center;
    display: flex;
    flex-wrap: wrap;
    gap: 5px;
    font-size: small;
    color: #666666;
}

.tech-list span {
    display: inline-block;
    margin-right: 5px;
}

.button {
    width: auto;
    align-self: center;
    padding: 10px 20px;
    text-align: center;
    text-decoration: none;
    background-color: #E26B43;
    color: #FFF3CF;
    font-size: 18px;
    border-radius: 5px;
    transition: background-color 0.3s ease;
    margin-top: auto;
}

.button:hover {
    background-color: #B33A3A;
    color: #FFF3CF;
    font-weight: bold;
    text-decoration: none;
}

.experience-container {
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    list-style-type: none;
    text-align: center;
}

.experience-item {
    background-color: #43281c;
    color: #fff3cf;
    border-radius: 10px;
    padding: 50px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    margin-bottom: 20px;
    width: 70%;
}

.skills-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 40px;
    padding: 20px;
}

.skill {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    width: 100px;
    margin: 20px;
}

.skill em {
    font-size: 40px;
    color: #43281C;
}

.skill p {
    font-size: 20px;
    margin: 0;
}

.about-container {
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
    gap: 10px;
}

.about-description {
    flex: 3;
    max-width: 75%;
}

.about-image {
    flex: 1;
    max-width: 25%;
    display: flex;
    justify-content: right;
    align-items: center;
}

#contact-form {
    display: flex;
    flex-direction: column;
    width: 70%;
    max-width: 700px;
    margin: 0 auto;
    padding: 20px;
}

#contact-form input[type="text"],
#contact-form input[type="email"],
#contact-form textarea {
    background-color: #fff3cf;
    width: 100%;
    padding: 15px;
    font-size: 16px;
    border-radius: 8px;
    border: 2px solid #ccc;
    margin-bottom: 10px;
    font-family: "Inconsolata", serif;
    font-weight: 800;
    font-variation-settings:
            "wdth" 112.6;
}

#contact-form textarea {
    height: 150px;
    resize: vertical;
}

#contact-form button {
    background-color: #E26B43;
    color: #fff3cf;
    font-size: 18px;
    padding: 12px 25px;
    border: none;
    border-radius: 8px;
    cursor: pointer;
    transition: background-color 0.3s ease;
    display: block;
    margin: 20px auto 0;
    font-family: "Inconsolata", serif;
    font-weight: 800;
    font-variation-settings:
            "wdth" 112.6;
}

#contact-form button:hover {
    background-color: #B33A3A;
    font-weight: bold;
}

.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    overflow: auto;
}

.modal-content {
    margin: 15% auto;
    padding: 20px;
    border: 1px solid #ccc;
    width: 50%;
    max-width: 500px;
    text-align: center;
    border-radius: 8px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

#status-message {
    font-weight: bold;
    color: #b33a3a;
    font-family: "Inconsolata", serif;
    font-variation-settings:
            "wdth" 112.6;
}

.close {
    color: #b33a3a;
    font-size: 28px;
    font-weight: bold;
    position: absolute;
    top: 10px;
    right: 25px;
}

.close:hover,
.close:focus {
    color: #4c0606;
    text-decoration: none;
    cursor: pointer;
}

